# aoc-py

./: .gitignore  README.md  pyproject.toml
2024/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py
api/: __init__.py
src/2024/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py  4.py  5.py  6.py  7.py  8.py  9.py
src/2025/: 1.py  10.py  11.py  12.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
src/aoc/: __init__.py
src/api/: __init__.py
src/utils/: __init__.py
utils/: __init__.py
