[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Dardan Bujupaj <dardan@ax.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"
matplotlib = "^3.9.3"
python-dotenv = "^1.0.1"
black = "^24.10.0"
requests = "^2.32.3"

[tool.poetry.scripts]
aoc = "aoc:both"
p1 = "aoc:part1"
p2 = "aoc:part2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
