[project]
name = "aoc"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  "numpy>=2.3",
  "matplotlib>=3.9",
  "python-dotenv>=1.1",
  "requests>=2.32",
  "ruff>=0.12",
  "graphviz>=0.21",
  "pytest>=9.0.1",
]

[project.scripts]
aoc = "aoc:both"
p1 = "aoc:part1"
p2 = "aoc:part2"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
